jena-shex/src/test/files/spec/validation/1dot-relative.shex
<S1> {
  <p1> [<o1>]
}
