jena-shex/src/test/files/spec/negativeSyntax/1val1bnode.shex
<http://a.example/IssueShape> {
   <http://a.example/p1> [_:a]
}
